bk_ida/gccida/g1/push_block
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/push_block/src/expr.c:3588:23: error: use of undeclared identifier 'machine_mode'
v4 = convert_modes( ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), ptr_mode, size, 1); 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/push_block/src/expr.c:3601:27: error: use of undeclared identifier 'machine_mode'
v10 = copy_to_mode_reg( ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), v4); 
                          ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/push_block/src/expr.c:3606:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), 
  ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/push_block/src/obj/expr.o] Error 1
